# armlet

./: .gitignore  LICENSE  Makefile  NEXT_BRANCH.md  README.md  aarch32.py  aarch32_simd.py  aarch32_system.py  aarch32simdfp.py  aarch64.py  aarch64_simd.py  aarch64ng.py  aarch64simdfp.py  cli.py  disas.py  index.html  insn.css  insn.js  main.c  params.json  pseudocode.py
arm/: __init__.py  common.py  latex_serializer.py
docs/: bitlayouts.md  builtins.md  diagnostics.md  reference.md
examples/: alias.aml  arith.aml  array.aml  assignment.aml  binops.aml  bitlayout.aml  bitlayout_handler.aml  bitlayout_to_json.aml  bitlayout_to_json_err_argc.aml  bitlayout_to_json_err_file.aml  bitlayout_to_json_err_type.aml  bitsarith.aml  bitsarray.aml  cond.aml  export_bitlayouts_json.aml  failures.aml  fun.aml  getset.aml  loop.aml  (+18 more)
tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter/bindings/c/: tree-sitter-armlet.pc.in
tree-sitter/bindings/c/tree_sitter/: tree-sitter-armlet.h
tree-sitter/bindings/go/: binding.go  binding_test.go
tree-sitter/bindings/node/: binding.cc  index.js
tree-sitter/bindings/python/tests/: test_binding.py
tree-sitter/bindings/python/tree_sitter_armlet/: __init__.py  binding.c
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/bindings/swift/TreeSitterArmletTests/: TreeSitterArmletTests.swift
tree-sitter/queries/: highlights.scm
tree-sitter/src/: grammar.json  node-types.json  parser.c  parser.d  scanner.c  scanner.d
(+47 files in other folders)
